[package]

name = "flip"
version = "1.0.2"
authors = [ "William Yao <williamyaoh@gmail.com>" ]

description = "Unicode-aware line reversal utility"
repository = "https://gitlab.com/williamyaoh/flip"
readme = "README.md"
license = "BSD-3-Clause"
keywords = [ "cli", "text", "utility" ]
categories = [ "command-line-utilities", "text-processing" ]

[dependencies]

unicode-segmentation = "^1.1.0"
docopt = "^0.7.0"
rustc-serialize = "^0.3.0"
